rebranding of legacy we moved pages tfs: 23592, 23600.
Change-Id: I8487d664e9a8a8555f2097f18b1c337a1219213a

--- a/appassure.com/kace.html
+++ b/appassure.com/kace.html
@@ -6,26 +6,15 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
-	<title>Remote-Scan.com is Now Quest.com</title><!--Meta Tags-->
+	<title>Kace is now Rapid Recovery!</title><!--Meta Tags-->
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<meta content="remote-Scan" property="og:title">
+	<meta content="Kace" property="og:title">
 	<meta content="http://software.dell.com/images/logos/dell.jpg" property="og:image">
-	<meta content="http://software.dell.com/remote-Scan-has-moved/" property="og:url">
-	<meta content="" property="og:description">
-	<meta name="BU" content="">
-	<meta name="Solution" content="">
-	<meta name="Product" content="">
-	<meta name="Technology" content="">
-	<meta name="Industry" content="">
-	<meta name="Platform" content="">
-	<meta name="Brand" content="">
-	<meta name="PageTemplate" content="Crawled Landing Page">
-	<meta name="Section" content="remote-Scan-has-moved">
-	<meta name="Subsection" content="">
+	<meta content="http://software.dell.com/Kace-has-moved/" property="og:url">
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
-	<link rel="alternate" hreflang="en" href="http://www.remote-Scan.com/"/>
-	<link rel="canonical" href="http://www.remote-Scan.com/"/><!-- V1LayoutHeadTagCommon (DSG US) -->
+	<link rel="alternate" hreflang="en" href="http://www.Kace.com/"/>
+	<link rel="canonical" href="http://www.Kace.com/"/><!-- V1LayoutHeadTagCommon (DSG US) -->
 	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/collective.min.css?38">
 	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/widgets-dsg.css">
 	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/print.min.css" media="print">
@@ -107,7 +96,6 @@
 		.ui-menu li::before {
 
 			width: 100%;
-			height: 1px;
 			display: block;
 			content: "";
 			margin-bottom: 5px;
@@ -364,20 +352,6 @@
 		}
 
 		/* Overlays */
-		.ui-widget-overlay {
-			background: #aaaaaa url("http://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
-			opacity: .3;
-			filter: Alpha(Opacity=30);
-		}
-
-		.ui-widget-shadow {
-			margin: -8px 0 0 -8px;
-			padding: 8px;
-			background: #aaaaaa url("http://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
-			opacity: .3;
-			filter: Alpha(Opacity=30);
-			border-radius: 8px;
-		}
 
 		.bg {
 			position: absolute;
@@ -415,57 +389,6 @@
 			background-clip: border-box;
 			background-color: transparent;
 			z-index: 1095;
-		}
-
-		.bg_lock {
-			top: 15%;
-			width: 116px;
-			height: 191px;
-			right: 0px;
-			background-image: url("http://software.dell.com/landing/images/bg_lock.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1098;
-		}
-
-		.bg_cloud {
-			bottom: 0px;
-			width: 315px;
-			height: 135px;
-			right: 11%;
-			background-image: url("http://software.dell.com/landing/images/bg_cloud.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1097;
-		}
-
-		.bg_scheme {
-			bottom: 0px;
-			width: 140px;
-			height: 86px;
-			right: 53%;
-			background-image: url("http://software.dell.com/landing/images/bg_scheme.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1096;
 		}
 
 		#footer {
@@ -521,176 +444,59 @@
 		}
 	</style>
 </head>
-<body class=" onehome page page-id-21323 page-template page-template-page-redirect-php">
-<div id="main-content">
-	<div class="wrapper" style="margin-top: 100px;">
-		<div class="round-corners">
-			<div class="bg_quest bg"></div>
-			<div class="menu">
-				<ul aria-activedescendant="ui-id-6" class="ui-menu ui-widget ui-widget-content ui-corner-all" id="menu" role="menu" tabindex="0">
+<body class="one">
+<div id="wrapper">
+	<div id="main-content">
+		<div class="wrapper" style="margin-top: 100px;">
+			<div class="round-corners">
+				<div class="bg_quest bg"></div>
+				<div class="menu">
+					<ul aria-activedescendant="ui-id-6" class="ui-menu ui-widget ui-widget-content ui-corner-all"
+					    id="menu" role="menu" tabindex="0">
+						<li class="ui-menu-item" role="presentation">
+							<a aria-haspopup="true" class="ui-corner-all" href="https://quest.com/kace/"
+							   id="ui-id-1" role="menuitem" tabindex="-1">Products</a>
+						</li>
+						<li class="ui-menu-item" role="presentation">
+							<a class="ui-corner-all" href="https://quest.com/solutions/endpoint-systems-management/"
+							   id="ui-id-2" role="menuitem" tabindex="-1">Solutions</a>
+						</li>
+						<li class="ui-menu-item" role="presentation">
+							<a class="ui-corner-all" href="https://quest.com/partners/" id="ui-id-3" role="menuitem" tabindex="-1">Partners</a>
+						</li>
+						<li class="ui-menu-item" role="presentation">
+							<a class="ui-corner-all" href="https://support.quest.com/productline/kace" id="ui-id-4"
+							   role="menuitem" tabindex="-1">Support</a>
+						</li>
+						<li class="ui-menu-item" role="presentation">
+							<a class="ui-corner-all" href="https://quest.com/company/contact-us.aspx" id="ui-id-6" role="menuitem"
+							   tabindex="-1">Contact</a>
+						</li>
+					</ul>
+					<script type="text/javascript">
+						$("#menu").menu();
+					</script>
+				</div>
+				<div id="body-container">
+					<h2>KACE.com has moved to Quest.com.</h2>
+					<article>
+						<p>You'll find all the information you need about KACE products as well as the breadth of Dell Software's
+							other IT management offerings.
+							Visit us at this web address to see the latest developments in our growing portfolio of enterprise-quality
+							products,
+							solutions and support services.</p>
 
-					<li>
-						<a href="http://software.dell.com/remotescan/">Products & Solutions</a>
-					</li>
-					<li>
-						<a href="https://shop.software.dell.com/682/purl-remotescan">Buy</a>
-					</li>
-					<li class="ui-menu-item" role="presentation">
-						<a aria-haspopup="true" class="ui-corner-all" href="#" id="ui-id-1" role="menuitem" tabindex="-1">Trials</a>
-						<ul aria-expanded="false" aria-hidden="true" class="ui-menu ui-widget ui-widget-content ui-corner-all" role="menu"
-						    style="left: 147px; width: 325px; display: none; z-index: 1100;">
-							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
-							                                                href="https://quest.com/register/55798" id="ui-id-7"
-							                                                role="menuitem"
-							                                                tabindex="-1">RemoteScan Enterprise</a></li>
-							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
-							                                                href="https://quest.com/register/80740" id="ui-id-8"
-							                                                role="menuitem"
-							                                                tabindex="-1">RemoteScan Enterprise User Edition</a></li>
-							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
-							                                                href="https://quest.com/register/55799" id="ui-id-9"
-							                                                role="menuitem"
-							                                                tabindex="-1">RemoteScan Universal</a></li>
-							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
-							                                                href="https://quest.com/register/80741" id="ui-id-10"
-							                                                role="menuitem"
-							                                                tabindex="-1">RemoteScan Universal User Edition</a></li>
-						</ul>
-
-
-					</li>
-					<li>
-						<a href="http://quest.com/remotescan/support.aspx">Support</a>
-					</li>
-					<li>
-						<a href="https://www.remote-scan.com/customer/index.php">Customer Login</a>
-					</li>
-					<li>
-						<a href="http://en.community.dell.com/techcenter/virtualization/remotescan/f">Communities</a>
-					</li>
-					<li>
-						<a href="http://www.remote-scan.com/customer/contact.php">Contact</a>
-					</li>
-				</ul>
-				<script type="text/javascript">
-					$("#menu").menu({position: {my: "left top", at: "right+6 top+5"}});
-					//$(document).ready(function(){$("#trial_submenu").css('left', '147px');});
-				</script>
+						<p><strong>Learn how we became part of Dell Software and how to find the product and support information
+							you need at <a href="quest.com/kace/">quest.com/kace/</a>.</strong></p>
+					</article>
+				</div>
 			</div>
-			<div id="body-container">
-				<h2>Remote-Scan is now Rapid Recovery!</h2>
-				<article>
-					<p>RemoteScan, the software product that enables you to connect document scanners and cameras to hosted
-						applications that are running in Microsoft Hyper-V, Citrix, and VMware servers, has moved to <a
-							style="text-decoration: underline" href="http://quest.com/remotescan">software.dell.com/remotescan</a></p>
-					<br>
-					<p class="cta">RemoteScan became a part of Dell Software in 2012 and remains the same scanner connectivity
-						product that organizations have relied on since 2003. Visit us at <a href="http://quest.com/remotescan"
-						                                                                     style="text-decoration: underline">our
-							new web address</a> and access trial downloads, search our technical documentation, purchase RemoteScan,
-						and learn about our licensing options.</p>
-				</article>
-			</div>
+			<div class="round-corners" id="footer">
+				<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="http://quest.com/legal/">Terms
+					of Use</a> | <a href="http://quest.com/legal/privacy.aspx">Privacy</a>
+				</p></div>
 		</div>
-		<div class="round-corners" id="footer">
-			<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="http://quest.com/legal/">Terms
-				of Use</a> | <a href="http://quest.com/legal/privacy.aspx">Privacy</a>
-			</p></div>
 	</div>
 </div>
-</div>
-</div>
-
-<!-- begin olark code -->
-
-<script data-cfasync="false" type="text/javascript">/*<![CDATA[*/
-window.olark || (function (c) {
-	var f = window, d = document, l = f.location.protocol == "https:" ? "https:" : "http:", z = c.name, r = "load";
-	var nt = function () {
-		f[z] = function () {
-			(a.s = a.s || []).push(arguments)
-		};
-		var a = f[z]._ = {}, q = c.methods.length;
-		while (q--) {
-			(function (n) {
-				f[z][n] = function () {
-					f[z]("call", n, arguments)
-				}
-			})(c.methods[q])
-		}
-		a.l = c.loader;
-		a.i = nt;
-		a.p = {
-			0: +new Date
-		};
-		a.P = function (u) {
-			a.p[u] = new Date - a.p[0]
-		};
-		function s() {
-			a.P(r);
-			f[z](r)
-		}
-
-		f.addEventListener ? f.addEventListener(r, s, false) : f.attachEvent("on" + r, s);
-		var ld = function () {
-			function p(hd) {
-				hd = "head";
-				return ["<", hd, "></", hd, "><", i, ' onl' + 'oad="var d=', g, ";d.getElementsByTagName('head')[0].", j, "(d.", h, "('script')).", k, "='", l, "//", a.l, "'", '"', "></", i, ">"].join("")
-			}
-
-			var i = "body", m = d[i];
-			if (!m) {
-				return setTimeout(ld, 100)
-			}
-			a.P(1);
-			var j = "appendChild", h = "createElement", k = "src", n = d[h]("div"), v = n[j](d[h](z)), b = d[h]("iframe"), g = "document", e = "domain", o;
-			n.style.display = "none";
-			m.insertBefore(n, m.firstChild).id = z;
-			b.frameBorder = "0";
-			b.id = z + "-loader";
-			if (/MSIE[ ]+6/.test(navigator.userAgent)) {
-				b.src = "javascript:false"
-			}
-			b.allowTransparency = "true";
-			v[j](b);
-			try {
-				b.contentWindow[g].open()
-			}
-			catch (w) {
-				c[e] = d[e];
-				o = "javascript:var d=" + g + ".open();d.domain='" + d.domain + "';";
-				b[k] = o + "void(0);"
-			}
-			try {
-				var t = b.contentWindow[g];
-				t.write(p());
-				t.close()
-			}
-			catch (x) {
-				b[k] = o + 'd.write("' + p().replace(/"/g, String.fromCharCode(92) + '"') + '");d.close();'
-			}
-			a.P(2)
-		};
-		ld()
-	};
-	nt()
-})({
-	loader: "static.olark.com/jsclient/loader0.js", name: "olark", methods: ["configure", "extend", "declare", "identify"]
-});
-/* custom configuration goes here (www.olark.com/documentation) */
-olark.identify('6267-708-10-7082');
-/*]]>*/</script>
-<noscript><a href="https://www.olark.com/site/6267-708-10-7082/contact" title="Contact us" target="_blank">Questions? Feedback?</a> powered by <a
-	href="http://www.olark.com?welcome" title="Olark live chat software">Olark live chat software</a></noscript>
-
-<!-- end olark code -->
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-	_uacct = "UA-1247950-1";
-	urchinTracker();
-</script>
 </body>
 </html>
-
