removed the external refrences
 Change-Id: I8487d664e9a8a8555f2097f18b1c337a1219213a

Change-Id: I8fa5d076954cb20aea29b8e03ade37a339097f26

--- a/pages/leave-behind/remote-scan.com.html
+++ b/pages/leave-behind/remote-scan.com.html
@@ -6,56 +6,43 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
-	<title>Remote-Scan.com is Now Quest.com</title><!--Meta Tags-->
+	<title>Remotescan has moved to Quest.com</title><!--Meta Tags-->
 	<meta name="keywords" content="">
-	<meta name="description" content="">
-	<meta content="remote-Scan" property="og:title">
-	<meta content="http://software.dell.com/images/logos/dell.jpg" property="og:image">
-	<meta content="http://software.dell.com/remote-Scan-has-moved/" property="og:url">
-	<meta content="" property="og:description">
-	<meta name="BU" content="">
-	<meta name="Solution" content="">
-	<meta name="Product" content="">
-	<meta name="Technology" content="">
-	<meta name="Industry" content="">
-	<meta name="Platform" content="">
-	<meta name="Brand" content="">
-	<meta name="PageTemplate" content="Crawled Landing Page">
-	<meta name="Section" content="remote-Scan-has-moved">
-	<meta name="Subsection" content="">
+	<meta name="description" content="KACE.com has moved to Quest.com">
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
-	<link rel="alternate" hreflang="en" href="http://www.remote-Scan.com/"/>
-	<link rel="canonical" href="http://www.remote-Scan.com/"/><!-- V1LayoutHeadTagCommon (DSG US) -->
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/collective.min.css?38">
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/widgets-dsg.css">
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/print.min.css" media="print">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/jquery.plugins.min.js"></script>
-	<!--[if lt IE 9]>
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/html5shiv.js"></script>
-	<![endif]--><!--[if IE 7]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie7.min.css">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/ie.min.js"></script>
-	<![endif]--><!--[if IE 8]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie8.min.css">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/ie.min.js"></script>
-	<![endif]--><!--[if IE 9]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie9.min.css"><![endif]-->
-	<link href="http://software.dell.com/Static/Styles/bootstrap-dsg.min.css?v1" type="text/css" rel="stylesheet">
-	<script src="http://software.dell.com/static/library/jQueryUI/jquery-ui-1.11.4.min.js"></script>
-	<script src="http://software.dell.com/static/Library/bootstrap-3.3.4.min.js"></script>
-	<script src="http://software.dell.com/static/Library/modernizr.min.js"></script>
-	<!--[if IE]>
-	<link rel="stylesheet" href="http://software.dell.com/Static/Styles/bootstrap-dsg-ie.css"><![endif]-->
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries --><!--[if lt IE 9]>
+	<link rel="alternate" hreflang="en" href="http://www.appassure.com/"/>
 	<script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
+	<!-- BEGIN GOOGLE ANALYTICS CODE -->
+	<script type="text/javascript">
+		_uacct = "UA-1247950-1";
+		urchinTracker();
+	</script>
+	<!-- END GOOGLE ANALYTICS CODE -->
+
 	<style type="text/css">
 		body {
 			background-color: rgb(238, 238, 238);
+			color: #333;
+			font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+			font-size: 13px;
+			line-height: 16px;
+		}
+
+		html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+			border: 0 none;
+			font: inherit;
+			margin: 0;
+			padding: 0;
+			vertical-align: baseline;
+		}
+
+		.wrapper {
+			width: 967px;
 		}
 
 		#id {
@@ -65,6 +52,8 @@
 		#main-content {
 			position: relative;
 			padding-bottom: 10px;
+			background-color: #eee;
+			line-height: 20px;
 		}
 
 		#copyright-container {
@@ -96,7 +85,6 @@
 		}
 
 		.ui-menu .ui-menu {
-			margin-top: -3px;
 			position: absolute;
 		}
 
@@ -107,7 +95,6 @@
 		.ui-menu li::before {
 
 			width: 100%;
-			height: 1px;
 			display: block;
 			content: "";
 			margin-bottom: 5px;
@@ -206,7 +193,7 @@
 
 		.ui-widget-header {
 			border: 1px solid #aaaaaa;
-			background: #eeeeee url("http://software.dell.com/landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;
+			background: #eeeeee url("https://software.dell.com/landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;
 			color: #FFFFFF;
 			font-weight: bold;
 		}
@@ -221,7 +208,7 @@
 		.ui-widget-content .ui-state-default,
 		.ui-widget-header .ui-state-default {
 			border: 1px solid #aaaaaa;
-			background: #6ea204 url("http://software.dell.com/landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;
+			background: #6ea204 url("https://software.dell.com/landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;
 			font-weight: bold;
 			color: #ffffff;
 		}
@@ -364,20 +351,7 @@
 		}
 
 		/* Overlays */
-		.ui-widget-overlay {
-			background: #aaaaaa url("http://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
-			opacity: .3;
-			filter: Alpha(Opacity=30);
-		}
 
-		.ui-widget-shadow {
-			margin: -8px 0 0 -8px;
-			padding: 8px;
-			background: #aaaaaa url("http://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
-			opacity: .3;
-			filter: Alpha(Opacity=30);
-			border-radius: 8px;
-		}
 
 		.bg {
 			position: absolute;
@@ -417,57 +391,6 @@
 			z-index: 1095;
 		}
 
-		.bg_lock {
-			top: 15%;
-			width: 116px;
-			height: 191px;
-			right: 0px;
-			background-image: url("http://software.dell.com/landing/images/bg_lock.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1098;
-		}
-
-		.bg_cloud {
-			bottom: 0px;
-			width: 315px;
-			height: 135px;
-			right: 11%;
-			background-image: url("http://software.dell.com/landing/images/bg_cloud.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1097;
-		}
-
-		.bg_scheme {
-			bottom: 0px;
-			width: 140px;
-			height: 86px;
-			right: 53%;
-			background-image: url("http://software.dell.com/landing/images/bg_scheme.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1096;
-		}
-
 		#footer {
 			position: relative;
 			box-shadow: none;
@@ -482,8 +405,7 @@
 		}
 
 		#footer p {
-			padding-left: 0px;
-			margin-left: -82px;
+			margin-left: 540px;
 		}
 
 		a, a:visited {
@@ -500,16 +422,25 @@
 			font-size: 15px;
 		}
 
+		#body-container ul {
+			margin: 0 0 10px 17px;
+		}
+
 		#body-container ul li {
 			font-size: 15px;
+			line-height: 20px;
+			list-style: outside none disc;
 		}
 
 		.round-corners {
 			padding: 150px 110px 150px 0px;
 			border: 0px currentColor;
 			border-radius: 0px;
-			border-bottom-left-radius: 0px;
 			background-image: url('/images/shared/bg-legacy.jpg');
+			position: relative;
+			overflow: hidden;
+			background-color: #fff;
+			left: 325px;
 		}
 
 		#body-container {
@@ -518,6 +449,23 @@
 			margin-top: 15px;
 			float: right;
 			margin-right: -65px;
+			display: inline-block;
+			font-size: 13px;
+			vertical-align: top;
+			width: 925px;
+		}
+
+		article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+			display: block;
+		}
+
+		.right-drop {
+			left: 200px;
+			width: 325px;
+			display: none;
+			z-index: 1100;
+			background-color: #eee;
+			margin-top: 204px;
 		}
 	</style>
 </head>
@@ -530,15 +478,16 @@
 				<ul aria-activedescendant="ui-id-6" class="ui-menu ui-widget ui-widget-content ui-corner-all" id="menu" role="menu" tabindex="0">
 
 					<li>
-						<a href="http://software.dell.com/remotescan/">Products & Solutions</a>
+						<a href="https://quest.com/remotescan/">Products & Solutions</a>
 					</li>
 					<li>
-						<a href="https://shop.software.dell.com/682/purl-remotescan">Buy</a>
+						<a href="https://shop.quest.com/682/catalog/category.59118/language.en/currency.USD/?id=aiBTgjJcYR">Buy</a>
 					</li>
 					<li class="ui-menu-item" role="presentation">
 						<a aria-haspopup="true" class="ui-corner-all" href="#" id="ui-id-1" role="menuitem" tabindex="-1">Trials</a>
-						<ul aria-expanded="false" aria-hidden="true" class="ui-menu ui-widget ui-widget-content ui-corner-all" role="menu"
-						    style="left: 147px; width: 325px; display: none; z-index: 1100;">
+						<ul aria-expanded="false" aria-hidden="true"
+						    class="ui-menu ui-widget ui-widget-content ui-corner-all right-drop" role="menu"
+						>
 							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
 							                                                href="https://quest.com/register/55798" id="ui-id-7"
 							                                                role="menuitem"
@@ -592,7 +541,7 @@
 				</article>
 			</div>
 		</div>
-		<div class="round-corners" id="footer">
+		<div id="footer">
 			<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="http://quest.com/legal/">Terms
 				of Use</a> | <a href="http://quest.com/legal/privacy.aspx">Privacy</a>
 			</p></div>
