--- a/pages/leave-behind/appassure.com.html
+++ b/pages/leave-behind/appassure.com.html
@@ -10,32 +10,8 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<meta content="AppAssure" property="og:title">
-	<meta content="http://software.dell.com/images/logos/dell.jpg" property="og:image">
-	<meta content="http://software.dell.com/appassure-has-moved/" property="og:url">
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
 	<link rel="alternate" hreflang="en" href="http://www.appassure.com/" />
-	<link rel="canonical" href="http://www.appassure.com/" /><!-- V1LayoutHeadTagCommon (DSG US) -->
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/collective.min.css?38">
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/widgets-dsg.css">
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/print.min.css" media="print">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/jquery.plugins.min.js"></script>
-	<!--[if lt IE 9]>
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/html5shiv.js"></script>
-	<![endif]--><!--[if IE 7]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie7.min.css">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/ie.min.js"></script>
-	<![endif]--><!--[if IE 8]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie8.min.css">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/ie.min.js"></script>
-	<![endif]--><!--[if IE 9]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie9.min.css"><![endif]-->
-	<link href="http://software.dell.com/Static/Styles/bootstrap-dsg.min.css?v1" type="text/css" rel="stylesheet">
-	<script src="http://software.dell.com/static/library/jQueryUI/jquery-ui-1.11.4.min.js"></script>
-	<script src="http://software.dell.com/static/Library/bootstrap-3.3.4.min.js"></script>
-	<script src="http://software.dell.com/static/Library/modernizr.min.js"></script>
-	<!--[if IE]>
-	<link rel="stylesheet" href="http://software.dell.com/Static/Styles/bootstrap-dsg-ie.css"><![endif]-->
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries --><!--[if lt IE 9]>
 	<script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
@@ -62,6 +38,22 @@
 	<style type="text/css">
 		body {
 			background-color: rgb(238, 238, 238);
+			color: #333;
+			font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+			font-size: 13px;
+			line-height: 16px;
+		}
+
+		html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+			border: 0 none;
+			font: inherit;
+			margin: 0;
+			padding: 0;
+			vertical-align: baseline;
+		}
+
+		.wrapper {
+			width: 967px;
 		}
 
 		#id {
@@ -71,6 +63,8 @@
 		#main-content {
 			position: relative;
 			padding-bottom: 10px;
+			background-color: #eee;
+			line-height: 20px;
 		}
 
 		#copyright-container {
@@ -211,7 +205,7 @@
 
 		.ui-widget-header {
 			border: 1px solid #aaaaaa;
-			background: #eeeeee url("http://software.dell.com/landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;
+			background: #eeeeee url("https://software.dell.com/landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;
 			color: #FFFFFF;
 			font-weight: bold;
 		}
@@ -226,7 +220,7 @@
 		.ui-widget-content .ui-state-default,
 		.ui-widget-header .ui-state-default {
 			border: 1px solid #aaaaaa;
-			background: #6ea204 url("http://software.dell.com/landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;
+			background: #6ea204 url("https://software.dell.com/landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;
 			font-weight: bold;
 			color: #ffffff;
 		}
@@ -423,8 +417,7 @@
 		}
 
 		#footer p {
-			padding-left: 0px;
-			margin-left: -82px;
+			margin-left: 540px;
 		}
 
 		a, a:visited {
@@ -441,16 +434,25 @@
 			font-size: 15px;
 		}
 
+		#body-container ul {
+			margin: 0 0 10px 17px;
+		}
+
 		#body-container ul li {
 			font-size: 15px;
+			line-height: 20px;
+			list-style: outside none disc;
 		}
 
 		.round-corners {
 			padding: 150px 110px 150px 0px;
 			border: 0px currentColor;
 			border-radius: 0px;
-			border-bottom-left-radius: 0px;
 			background-image: url('/images/shared/bg-legacy.jpg');
+			position: relative;
+			overflow: hidden;
+			background-color: #fff;
+			left: 325px;
 		}
 
 		#body-container {
@@ -459,6 +461,14 @@
 			margin-top: 15px;
 			float: right;
 			margin-right: -65px;
+			display: inline-block;
+			font-size: 13px;
+			vertical-align: top;
+			width: 925px;
+		}
+
+		article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+			display: block;
 		}
 	</style>
 </head>
@@ -514,14 +524,14 @@
 								<li>Lower costs – all capabilities included in one solution</li>
 							</ul>
 							<p><strong>And, it’s a free and easy upgrade for existing AppAssure 5.4.3 license holders!</strong></p>
-							<p><a href="http://software.dell.com/products/rapid-recovery/" style="text-decoration: underline;">Learn
+							<p><a href="https://software.dell.com/products/rapid-recovery/" style="text-decoration: underline;">Learn
 								more</a> – download a Rapid Recovery
 								<a href="https://software.dell.com/register/94236/" style="text-decoration: underline;">trial today</a>.
 							</p>
 						</article>
 					</div>
 				</div>
-				<div class="round-corners" id="footer">
+				<div id="footer">
 					<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="http://quest.com/legal/">Terms
 						of Use</a> | <a href="http://quest.com/legal/privacy.aspx">Privacy</a>
 					</p></div>
