--- a/communities/header.html
+++ b/communities/header.html
@@ -77,7 +77,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="layout-region content" id="ctl02_ctl01_content">
+			<!--<div class="layout-region content" id="ctl02_ctl01_content">
 				<div class="layout-region-inner content">
 					<div class="content-fragment html-content no-wrapper with-spacing responsive-1" id="header-427">
 						<div class="content-fragment-content">
@@ -107,7 +107,7 @@
 					</div>
 					<div id="header-428"></div>
 				</div>
-			</div>
+			</div>-->
 		</div>
 		<div class="layout-footer"></div>
 	</div>
