--- a/pages/akamai/failover.html
+++ b/pages/akamai/failover.html
@@ -29,19 +29,19 @@
 			padding: 20px;
 		}
 	</style>
-
 </head>
 <body>
 
 <div id="wrapper">
 	<header>
 		<div id="bottom-header">
-			<div class="wrapper">
+			<div class="container">
 				<img src="//failover.quest.com/Quest/images/logo.png" id="logo" alt="Dell Software">
 			</div>
 		</div>
 	</header>
 </div>
+
 <div class="container">
 	<h1>Performing Maintenance</h1>
 	<div class="alert mark" role="alert">
@@ -67,21 +67,20 @@
 					</thead>
 					<tbody>
 					<tr>
-						<td scope="row">Sales</td>
+						<td>Sales</td>
 						<td>800-306-9329</td>
 						<td><a href="mailto:sales@software.dell.com">sales@software.dell.com</a></td>
 						<td><a href="https://support.quest.com/productinformation.aspx">https://support.quest.com/productinformation.aspx</a>
 						</td>
 					</tr>
 					<tr>
-						<td scope="row">Support</td>
+						<td>Support</td>
 						<td>800-306-9329</td>
 						<td></td>
 						<td><a href="https://support.quest.dell.com/">https://support.quest.dell.com/</a></td>
 					</tr>
 					<tr>
-						<td>Licensing
-						</th>
+						<td>Licensing</td>
 						<td>800-306-9329</td>
 						<td></td>
 						<td><a
@@ -89,16 +88,14 @@
 						</td>
 					</tr>
 					<tr>
-						<td>Support Renewals
-						</th>
+						<td>Support Renewals</td>
 						<td>800-306-9329</td>
 						<td></td>
 						<td><a href="https://support.quest.dell.com/contact-us/renewals">https://support.quest.dell.com/contact-us/renewals</a>
 						</td>
 					</tr>
 					<tr>
-						<td>Accounting
-						</th>
+						<td>Accounting</td>
 						<td>800-306-9329</td>
 						<td><a href="mailto:AP.DSG.Inquiry@software.dell.com">AP.DSG.Inquiry@software.dell.com</a></td>
 						<td>
@@ -110,12 +107,10 @@
 		</div>
 	</div>
 </div>
+
 <div>
 	<footer>
-
-		<p style="text-align:center; line-height:30px; font-size:12px; margin:0 auto">©2016 Quest Software Inc. ALL RIGHTS
-			RESERVED.</p>
-
+		<p style="text-align:center; line-height:30px; font-size:12px; margin:0 auto">©2016 Quest Software Inc. ALL RIGHTS RESERVED.</p>
 	</footer>
 </div>
 
