--- a/communities/navigation.html
+++ b/communities/navigation.html
@@ -1,9 +1,8 @@
-<div class="custom-main-navigation">
+<div class="custom-main-navigation hidden">
 	<ul class="tier1">
-		<li><a href="#">Home</a></li>
-		<li><a href="#">Blog</a></li>
-		<li><a href="#">Forums</a></li>
-		<li><a href="#">Beta</a></li>
-		<li><a href="#">About</a></li>
+		<li><a href="/community/b/en">Blog</a></li>
+		<li><a href="/community/products/">Forums</a></li>
+		<li><a href="/community/beta/">Beta</a></li>
+		<li><a href="/community/about/">About</a></li>
 	</ul>
 </div>
