Added new copy, images, and URLs
Also changed the ordering of the trending cards and moved down the ransomware card in place of the IT card. Updated Sucess area with mobile code since the carousel broke.

--- a/pages/homepage/homepage-day1.html
+++ b/pages/homepage/homepage-day1.html
@@ -9,11 +9,9 @@
       <div class="container xs-jumbotron-header">
         <div class="row">
           <div class="col-xs-12 text-white">
-            <h1>Eight ways to protect your
-              <br />
-              network against ransomware
+            <h1>SonicWall enters an exciting new era
             </h1>
-            <p class="hidden">Application performance monitoring for better business.
+            <p class="mb-10">Newly independent. Focused on growth.
             </p>
             <p>
               <a href="#" class="btn btn-primary">Read the eBook
@@ -35,15 +33,15 @@
           </div>
           <div class="card-content">
             <div class="card-title-block">
-              <span class="card-title">Ready or not --mobile workers and BYOD are here to stay
+              <span class="card-title">Learn how ransomware can hold your organization hostage
               </span>
             </div>
             <div class="card-text">
-              <p>Mobility and BYOD in the workplace have increased dramatically. How you prepare and support your mobile workers can impact your organization&#39;s future.
+              <p>Safeguard your company against modern-day ransomware attacks. See how ransomware works and learn tactics cybercriminals use to infiltrate your organization.
               </p>
             </div>
             <div class="card-action">
-              <a class="btn btn-primary btn-block-sm" target="new_blank">Read the Brief
+              <a class="btn btn-primary btn-block-sm" target="new_blank" href="/docs/8-ways-to-protect-your-network-from-ransomware-ebook-22240.pdf">Learn More
               </a>
             </div>
           </div>
@@ -63,7 +61,7 @@
               </p>
             </div>
             <div class="card-action">
-              <a class="btn btn-primary btn-block-sm" target="new_blank">Learn More
+              <a class="btn btn-primary btn-block-sm" target="new_blank" href="/products/sonicwall-capture-atp/">Learn More
               </a>
             </div>
           </div>
@@ -75,15 +73,15 @@
           </div>
           <div class="card-content">
             <div class="card-title-block">
-              <span class="card-title">No IT security staff? No problem. We can do it for you.
+              <span class="card-title">Ready or not --mobile workers and BYOD are here to stay
               </span>
             </div>
             <div class="card-text">
-              <p>Not every organization has the in-house resources needed to support IT security. Let one of our expert service partners manage network security for you.
+              <p>Mobility and BYOD in the workplace have increased dramatically. How you prepare and support your mobile workers can impact your organization&#39;s future.
               </p>
             </div>
             <div class="card-action">
-              <a class="btn btn-primary btn-block-sm" target="new_blank">Learn More
+              <a class="btn btn-primary btn-block-sm" target="new_blank" href="/docs/executive-brief-byod-mobile-access-and-the-demand-of-mobile-security-technical-brief-22376.pdf">Read the Brief
               </a>
             </div>
           </div>
@@ -141,7 +139,7 @@
   <div class="container">
     <div class="row mt-40 mb-40 mt-0-xs mb-0-xs">
       <div class="col-sm-12 col-md-6 col-xs-12 mt-20 mb-20">
-        <a href="/docs/executive-summary-dell-security-2016-threat-report-white-paper-20843.pdf" target="_blank">
+        <a href="/documents/mchenry-county-college-deploys-sonicwall-firewall-solutions-to-enhance-security-along-with-other-dell-solutions-case-study-113425.pdf" target="_blank">
           <img class="img-responsive img-border-grey" src="/images/banner/seahawk/mchenry-county-college.jpg" />
         </a>
       </div>
