Added new margins in hero section

--- a/pages/homepage/homepage-day1.html
+++ b/pages/homepage/homepage-day1.html
@@ -9,12 +9,12 @@
       <div class="container xs-jumbotron-header">
         <div class="row">
           <div class="col-xs-12 text-white">
-            <h1>SonicWall enters an exciting new era
+            <h1 class="mb-10">SonicWall enters an exciting new era of growth
             </h1>
-            <p class="mb-10">Newly independent. Focused on growth.
+            <p class="mb-20">Newly independent. Focused on the future.
             </p>
             <p>
-              <a href="#" class="btn btn-primary">Read the eBook
+              <a href="https://blog.sonicwall.com" target="_blank" class="btn btn-primary">Learn More
               </a>
             </p>
           </div>
