Trending cards updates
Changed <span> to <h4>. Minor adjustments.

--- a/pages/homepage/homepage-day1.html
+++ b/pages/homepage/homepage-day1.html
@@ -33,8 +33,8 @@
           </div>
           <div class="card-content">
             <div class="card-title-block">
-              <span class="card-title">Learn how ransomware can hold your organization hostage
-              </span>
+              <h4 class="mt-0 mb-15">Learn how ransomware can hold your organization hostage
+              </h4>
             </div>
             <div class="card-text">
               <p>Safeguard your company against modern-day ransomware attacks. See how ransomware works and learn tactics cybercriminals use to infiltrate your organization.
@@ -53,8 +53,8 @@
           </div>
           <div class="card-content">
             <div class="card-title-block">
-              <span class="card-title">SonicWall Capture | Why three sandbox engines beat one
-              </span>
+              <h4 class="mt-0 mb-15">SonicWall Capture | Why three sandbox engines beat one
+              </h4>
             </div>
             <div class="card-text">
               <p>SonicWall Capture detects and stops more malware than any competing sandbox. Stop unknown and zero-day attacks at the gateway with a multi-engine solution.
@@ -73,8 +73,8 @@
           </div>
           <div class="card-content">
             <div class="card-title-block">
-              <span class="card-title">Ready or not --mobile workers and BYOD are here to stay
-              </span>
+              <h4 class="mt-0 mb-15">Ready or not --mobile workers and BYOD are here to stay
+              </h4>
             </div>
             <div class="card-text">
               <p>Mobility and BYOD in the workplace have increased dramatically. How you prepare and support your mobile workers can impact your organization&#39;s future.
