--- a/widgets/organisms/breadcrumb/index.htm
+++ b/widgets/organisms/breadcrumb/index.htm
@@ -1,7 +1,7 @@
-<div class="container breadcrumb-container">
-	<ul class="breadcrumb hidden-xs">
-		<li><a href="/"></a><span class="divider"></span></li>
+<div class="container breadcrumb-container hidden-xs">
+	<ul class="breadcrumb">
+		<li><a href="/"><span>Home</span></a></li>
 		<li><a href="#">Previous Page</a></li>
-		<li class="active">Current Page</li>
+		<li>Current Page</li>
 	</ul>
 </div>
