Updated breadcrumb pattern.
Change-Id: I7f99b40799cad0d2f1f844a4e9ceca1854a19048

--- a/widgets/organisms/breadcrumb/index.htm
+++ b/widgets/organisms/breadcrumb/index.htm
@@ -1,6 +1,6 @@
 <div class="container breadcrumb-container hidden-xs">
 	<ul class="breadcrumb">
-		<li><a href="/">Home</a></li>
+		<li><a href="/"><span>Home</span></a></li>
 		<li><a href="#">Previous Page</a></li>
 		<li>Current Page</li>
 	</ul>
