Added Final English copy and fixed Ransomware CTA

--- a/pages/homepage/homepage-day1.html
+++ b/pages/homepage/homepage-day1.html
@@ -9,9 +9,9 @@
       <div class="container xs-jumbotron-header">
         <div class="row">
           <div class="col-xs-12 text-white">
-            <h1 class="mb-10">SonicWall enters an exciting new era of growth
+            <h1 class="mb-10">SonicWall enters an exciting new era
             </h1>
-            <p class="mb-20">Newly independent. Focused on the future.
+            <p class="mb-20">A quarter century of experience.  A leader in innovation. A trusted security partner.
             </p>
             <p>
               <a href="https://blog.sonicwall.com" target="_blank" class="btn btn-primary">Learn More
@@ -41,7 +41,7 @@
               </p>
             </div>
             <div class="card-action">
-              <a class="btn btn-primary btn-block-sm" target="new_blank" href="/docs/how-ransomware-can-hold-your-business-hostage-ebook-22161.pdf">Learn More
+              <a class="btn btn-primary btn-block-sm" target="new_blank" href="/docs/how-ransomware-can-hold-your-business-hostage-ebook-22161.pdf">Read the Ebook
               </a>
             </div>
           </div>
