Add new IDs for banner head and sub & line-height

--- a/pages/homepage/homepage-day1.html
+++ b/pages/homepage/homepage-day1.html
@@ -8,11 +8,11 @@
     <div class="valign-inner">
       <div class="container xs-jumbotron-header">
         <div class="row">
-          <div class="col-xs-12 text-white">
-            <h1 class="mb-10">SonicWall enters an exciting new era
+          <div class="col-xs-12 text-white text-md">
+            <h1 class="mb-10" id="banner-head">SonicWall enters an exciting new era
             </h1>
-            <p class="mb-20">A quarter century of experience.  A leader in innovation. A trusted security partner.
-            </p>
+            <h5 class="mb-20" id="banner-subhead">A quarter century of experience.  A leader in innovation. A trusted security partner.
+            </h5>
             <p>
               <a href="https://blog.sonicwall.com" target="_blank" class="btn btn-primary">Learn More
               </a>
